# QualitativeModel

./: InitialGuess.cc  InitialGuess.h  IntegrateSystem.h  LimitSolution.cc  LimitSolution.h  LinearInterpolator.h  Parameters.cc  Parameters.h  ParametersList.prm  ParametersList_with_variables_for_subs.prm  SolutionStruct.cc  SolutionStruct.h  WaveConstructor.cc  WaveConstructor.h  are_equal.h  calculate.cc  run_param
TravelingWaves/: CMakeLists.txt  InitialGuess.cc  LimitSolution.cc  LimitSolution.h  Parameters.h  ParametersList.prm  README.md  SolutionStruct.cc  WaveConstructor.cc  WaveConstructor.h  calculate.cc  linspace.h
TravelingWavesDeflagration/: CMakeLists.txt  IntegrateSystem.h  LinearInterpolator.h  Parameters.cc  Parameters.h  ParametersList.prm  README.md  Solution.cc  Solution.h  TravelingWaveSolver.cc  TravelingWaveSolver.h  calculate_profile.cc  calculate_profile.h  main.cc
